# glidinglib

./: config_template.json  pyproject.toml
harness/: test_aerolog_aircraft_client.py  test_aerolog_flights.py  test_combination_flights.py  test_ga_accounts.py  test_ga_flights.py  test_glidingapp_aircraft.py  test_glidingapp_aircraft_raw.py  test_ktrax_flights.py  test_ogn_ddb_client.py  test_tech_quals.py
src/glidinglib/clients/: aerolog_aircraft_client.py  aerolog_client.py  aerolog_flight_client.py  aerolog_tech_qualification_client.py  glidingapp_account_client.py  glidingapp_aircraft_client.py  glidingapp_client.py  glidingapp_flight_client.py  ktrax_flight_client.py  ogn_ddb_client.py
src/glidinglib/mappers/: aerolog_aircraft_mapper.py  aerolog_combination_flight_mapper.py  aerolog_flight_mapper.py  aerolog_tech_qualification_mapper.py  glidingapp_account_mapper.py  glidingapp_aircraft_mapper.py  glidingapp_combination_flight_mapper.py  glidingapp_flight_mapper.py  ktrax_combination_flight_mapper.py  ktrax_flight_mapper.py
src/glidinglib/models/: aerolog_aircraft_model.py  aerolog_flight_model.py  aerolog_tech_qualification.py  combination_flight_model.py  glidingapp_account_model.py  glidingapp_aircraft_model.py  glidingapp_flight_model.py  ktrax_flight_model.py
src/glidinglib/services/: aerolog_flight_service.py  glidingapp_account_service.py  glidingapp_aircraft_service.py  glidingapp_flight_service.py  ktrax_flight_service.py
src/glidinglib/utils/: app_paths.py
