[tool.poetry]
name = "glidinglib"
version = "1.1.4"
description = ""
authors = ["Paul Ruskin"]
packages = [{ include = "glidinglib", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.33.1"
tzdata = "^2026.2"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
